--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -8,8 +8,8 @@
 </head>
 
 
-<body style="margin:0px;padding:0px;position:relative;min-height:100vh;">
-    <header style="background-color:#FF0000;height:70px;width:100%"></header>
+<body style="margin:0px;padding:0px;">
+    <header style="background-color:#FF0000;height:70px;width:100%;"></header>
 
     <footer style="background-color:#00FF00;height:60px;width:100%;text-align:center;line-height:60px;
     position:absolute;bottom:0%;">Best School</footer>
