add ellipses to subtitle

--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -21,11 +21,11 @@
         <section class="filters">
             <div class="locations">
                 <h3>States</h3>
-                <h4>New York, Texas</h4>
+                <h4>New York, Texas..</h4>
             </div>
             <div class="amenities">
                 <h3>Amenities</h3>
-                <h4>Kitchen, Internet</h4>
+                <h4>Kitchen, Internet..</h4>
             </div>
             <button>Search</button>
         </section>
