--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -54,15 +54,19 @@
         </section>
         <section class="places">
             <h1>Places</h1>
-            <article> 
-                <h2>My Apartment</h2>
-            </article>
-            <article> 
-                <h2>Condominium</h2>
-            </article>
-            <article> 
-                <h2> Hotel </h2>
-            </article>
+            <div class="places-flex">
+                <div class="sub-flex"> 
+                <article> 
+                    <h2>My Apartment</h2>
+                </article>
+                <article> 
+                    <h2>Condominium</h2>
+                </article>
+                </div>
+                <article> 
+                    <h2> Hotel </h2>
+                </article>
+            </div>
         </section>
     </div>
     <footer>Best School</footer>
