--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -56,16 +56,17 @@
             <h1>Places</h1>
             <div class="places-flex">
                 <div class="sub-flex"> 
-                <article> 
-                    <h2>My Apartment</h2>
-                </article>
-                <article> 
-                    <h2>Condominium</h2>
-                </article>
+                    <article> 
+                        <h2>My Apartment</h2>
+                    </article>
+                    <article> 
+                        <h2>Condominium</h2>
+                    </article>
+                    </div>
+                    <article> 
+                        <h2> Hotel </h2>
+                    </article>
                 </div>
-                <article> 
-                    <h2> Hotel </h2>
-                </article>
             </div>
         </section>
     </div>
