--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -104,9 +104,11 @@
                         </div>
                         <div class="description">
                             <p>
-                                With two bedrooms and 2 full baths, there’s space to comfortably accommodate 4 people.
-                                The primary bedroom is on the second level and features a king bed, an ensuite
-                                bath and remote workstation along with the main living area and a powder room.
+                                Welcome to “Heavenly Sunset,” a beachfront vacation rental that lives up to its name. This rental is one-half
+                                of a gorgeous Gulf-front property in Orange Beach, and it sits in the perfect spot to take in the 
+                                sapphire waves, white sands, and golden sun of the Gulf. Not to mention the property’s excellent central 
+                                location near everything you’d want to do in Orange Beach, Gulf Shores and Perdido Key, FL.
+                                It’s truly Heaven on Earth! 
                             </p>
                         </div>
                     </article>
@@ -114,17 +116,17 @@
                 <article> 
                     <h2> Hotel </h2>
                     <div class="price_by_night">
-                        $112
+                        $180
                     </div>
                     <div class="information">
                         <div class="max_guest">
-                            <h4> 5 Guests</h4> 
+                            <h4> 8 Guests</h4> 
                         </div>
                         <div class="number_rooms">
-                            <h4>2 Bedrooms</h4>
+                            <h4>4 Bedrooms</h4>
                         </div>
                         <div class="number_bathrooms">
-                            <h4>2 Bathroom</h4>
+                            <h4>3 Bathroom</h4>
                         </div>
                     </div>
                     <div class="user">
@@ -132,9 +134,10 @@
                     </div>
                     <div class="description">
                         <p>
-                            With two bedrooms and 2 full baths, there’s space to comfortably accommodate 4 people.
-                            The primary bedroom is on the second level and features a king bed, an ensuite
-                            bath and remote workstation along with the main living area and a powder room.
+                            Start your next adventure and step into The Elk Mountain Lodge, our picturesque 3-bedroom cabin in the rolling landscape of Red Lodge,
+                            where you’ll be greeted with incredible views through floor-to-ceiling windows. Our carefully designed mountain retreat is the 
+                            quintessential outdoor getaway, central to many of the adventures found under Montana’s expansive skies. Perfect for family fun,
+                            couples’ ski retreats, visits to Yellowstone (less than two hours out), and other activities for up to 8 guests!
                         </p>
                     </div>
                 </article>
