--- a/web_static/100-index.html
+++ b/web_static/100-index.html
@@ -82,6 +82,28 @@
                                 bath and remote workstation along with the main living area and a powder room.
                             </p>
                         </div>
+                        <div class="amenities">
+                            <h2>Amenities</h2>
+                            <ul>
+                                <li> <p>TV</p> </li>
+                                <li> <p>WiFi</p> </li>
+                                <li> <p>Pet Friendly</p> </li>
+                            </ul>
+                        </div>
+                        <div class="reviews">
+                            <h2>2 Reviews</h2>
+                            <ul>
+                                <li>
+                                    <h3>From Akua Adams the 15th May 2020:</h3>
+                                    <p>Very nice place, everything matched the description. Money well-spent.</p>
+                                </li>
+                                <li>
+                                    <h3>From Jonathan Manson the 15th May 2020:</h3>
+                                    <p>Ammazzingg place. Definitely going back soon</p>
+                                </li>
+                            </ul>
+                        </div>
+
                     </article>
                     <article> 
                         <h2>Villa</h2>
@@ -111,6 +133,26 @@
                                 It’s truly Heaven on Earth! 
                             </p>
                         </div>
+                        <div class="amenities">
+                            <h2>Amenities</h2>
+                            <ul>
+                                <li> <p>TV</p> </li>
+                                <li> <p>WiFi</p> </li>
+                            </ul>
+                        </div>
+                        <div class="reviews">
+                            <h2>2 Reviews</h2>
+                            <ul>
+                                <li>
+                                    <h3>From Sandra Davidson the 5th December 2021:</h3>
+                                    <p>Owner was rude over the phone. The place was also quite dirty, horrible experience.</p>
+                                </li>
+                                <li>
+                                    <h3>From Brad Williams the 9th August 2019:</h3>
+                                    <p>Not a bad place but definitely overpriced. WiFi was trash as hell too.</p>
+                                </li>
+                            </ul>
+                        </div>
                     </article>
                 </div>
                 <article> 
@@ -139,6 +181,25 @@
                             quintessential outdoor getaway, central to many of the adventures found under Montana’s expansive skies. Perfect for family fun,
                             couples’ ski retreats, visits to Yellowstone (less than two hours out), and other activities for up to 8 guests!
                         </p>
+                    </div>
+                    <div class="amenities">
+                        <h2>Amenities</h2>
+                        <ul>
+                            <li> <p>TV</p> </li>
+                            <li> <p>WiFi</p> </li>
+                            <li> <p>Pet Friendly</p> </li>
+                        </ul>
+                    </div>
+                    <div class="reviews">
+                        <h2> 1 Review </h2>
+                        <ul>
+                            <li>
+                                <h3>From Lisa Benson the 29th January 2022:</h3>
+                                <p>Space was very spacious and lovely, had a blast with my friends. Owner was very friendly.
+                                    Would 100% recommend.
+                                </p>
+                            </li>
+                        </ul>
                     </div>
                 </article>
             </div>
